# dhcp-template

./: .containerignore  .gitignore  Cargo.toml  README.md  renovate.json5
.github/workflows/: ci.yml  release.yaml
charts/dhcp-template/: Chart.yaml  values.yaml
charts/dhcp-template/templates/: NOTES.txt  _helpers.tpl  agent-configmap.yaml  agent-daemonset.yaml  agent-serviceaccount.yaml  crd.yaml  operator-configmap.yaml  operator-deployment.yaml  operator-rbac.yaml  operator-service.yaml  operator-serviceaccount.yaml
crates/controller/: Cargo.toml
crates/dhcp-template-agent/: Cargo.toml  Containerfile
crates/dhcp-template-agent/src/: agent.rs  main.rs  service.rs  shallow.rs
crates/dhcp-template-agent/src/provider/: dhcpcd.rs  mod.rs  notify.rs
crates/dhcp-template-agent/src/source/: dhcpcd.rs  mod.rs
crates/dhcp-template-api/: Cargo.toml  build.rs
crates/dhcp-template-api/proto/: dhcp-template.proto
crates/dhcp-template-api/src/: lib.rs
crates/dhcp-template-crd/: Cargo.toml
crates/dhcp-template-crd/src/: dhcp_template.rs  from.rs  lib.rs  object_ref.rs
crates/dhcp-template-operator/: Cargo.toml  Containerfile
crates/dhcp-template-operator/src/: api_ext.rs  discovery.rs  main.rs  nodes.rs  operator.rs  service.rs  state.rs  template.rs
crates/dhcp-template-operator/src/controller/: context.rs  mod.rs  plan.rs  reconcile.rs  status.rs
crates/dhcp-template-operator/src/k8s/: api_ext.rs  discovery.rs  labels.rs  mod.rs
crates/dhcp-template-operator/src/k8s/dynamic_ext/: apply_ext.rs  delete_ext.rs  labels.rs  managed_ext.rs  mod.rs  owner_ext.rs  safe_ext.rs
crates/dhcp-template-operator/src/k8s/template_ext/: condition_ext.rs  mod.rs  status_ext.rs
crates/dhcp-template-stream/: Cargo.toml
crates/dhcp-template-stream/src/: boxed.rs  lib.rs  result.rs
