[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.89"
dhcp-template-api = { path = "crates/dhcp-template-api" }
dhcp-template-crd = { path = "crates/dhcp-template-crd" }
env_logger = "0.11"
envconfig = "0.11.1"
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
kube = "3.0.1"
log = "0.4"
minijinja = "2.15"
prost = "0.14.3"
schemars = "1"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
