[package]
name = "dhcp-template-agent"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
dhcp-template-api = { workspace = true }
dhcproto = { workspace = true }
envconfig = { workspace = true }
futures-time = { workspace = true }
futures-util = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
