[package]
name = "dhcp-template-api"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
