[package]
name = "dhcp-template-crd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
